objects/BCMSDocumentIdPairing__c.object
<CustomObject>
    <description>Holds pairing for SF documents that has been created in BCMS, from where we have the Id as well</description>
    <fields>
        <fullName>BCMSDocumentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>BCMSDocumentId</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Day1Id__c</fullName>
        <label>Day1Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SFDocumentId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Saved_In_BCMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved In BCMS</label>
        <type>Checkbox</type>
    </fields>
    <label>BCMSDocumentIdPairing</label>
    <nameField>
        <displayFormat>SFBCMS-{000000}</displayFormat>
        <label>BCMSDocumentIdPairing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BCMSDocumentIdPairings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>